<resources>
    <string name="app_name">SubscriptionManager</string>
    <string name="name">Name</string>
    <string name="days">Days</string>
    <string name="start_date">Start Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="name_of_service">Name of Service</string>
    <string name="subscriptions_days_min_2">Subscriptions Days (min:2)</string>
</resources>