<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/EditTextStyle"
            android:hint="@string/name_of_service" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/start_date" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_startDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_text_startMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_text_startYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_margin">

        <TextView
            style="@style/HeadingStyle"
            android:text="@string/days" />

        <EditText
            android:id="@+id/edit_text_days"
            style="@style/EditTextStyle"
            android:hint="@string/subscriptions_days_min_2"
            android:inputType="number" />

    </LinearLayout>


</LinearLayout>